--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,19 +5,21 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
-set(CMAKE_PREFIX_PATH D:\\qt\\6.3.0\\mingw_64)
+set(CMAKE_PREFIX_PATH C:/Qt/6.2.4/mingw_64)
 
 find_package(Qt6 COMPONENTS
         Core
         Gui
         Widgets
+        Multimedia
         REQUIRED)
 
-add_executable(plying_with_fire2 main.cpp)
+add_executable(plying_with_fire2 main.cpp resources.qrc src/Home/Home.cpp src/Home/Home.h src/views/TextField.cpp src/views/TextField.h)
 target_link_libraries(plying_with_fire2
         Qt::Core
         Qt::Gui
         Qt::Widgets
+        Qt::Multimedia
         )
 
 if (WIN32)
